--- a/blocks/form.css
+++ b/blocks/form.css
@@ -1,12 +1,31 @@
 .form {
-    width: 100%;
+    max-width: 358px;
+    margin: 34px auto 36.51px;
 }
 
-.form__input {
+.form__info {
+    padding: 0;
+    border: none;
+    margin: 0;
+}
+
+.form__info-title {
+    margin: 0;
+    color: #000;
+    font-family: 'Inter', Arial, sans-serif;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 24px;
+    line-height: 1.2;
+    margin-bottom: 54px;
+    max-height: 23px;
+}
+
+.form__info-input {
     width: 100%;
     padding: 0;
     border: none;
-    border-bottom: 1px solid #000;
+    border-bottom: 1px solid rgba(0, 0, 0, .2);
     text-decoration: none;
     font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
@@ -17,11 +36,11 @@
     max-height: 14px;
 }
 
-.form__input:first-child {
+.form__info-input:nth-child(2) {
     margin-bottom: 29.74px;
 }
 
-.form__button {
+.form__info-button {
     width: 100%;
     height: 50.15px;
     background-color: #000;
@@ -35,19 +54,33 @@
     font-weight: 400;
     font-size: 18px;
     line-height: 1.22;
+    transition: opacity .4s ease;
+    padding: 0;
+}
+
+.form__info-button:hover {
+    opacity: .8;
 }
 
 @media screen and (max-width: 565px) {
-    .form__button {
+    .form {
+        max-width: 238px;
+        margin: 25px auto;
+    }
+    .form__info-title {
+        font-size: 18px;
+        margin-bottom: 76px;
+    }
+    .form__info-button {
         height: 46px;
         margin-top: 46px;
         font-size: 14px;
     }
-    .form__input {
+    .form__info-input {
         font-size: 14px;
         padding-bottom: 9px;
     }
-    .form__input:first-child {
+    .form__info-input:first-child {
         margin-bottom: 30px;
     }
 }
