--- a/blocks/edit.css
+++ b/blocks/edit.css
@@ -1,64 +1,48 @@
 .edit {
-    width: 430px;
-    height: 330px;
-    background-color: #FFF;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .5);
     position: fixed;
-    top: 50%;
-    right: 50%;
-    transform: translate(50%, -64%);
-    border-radius: 10px;
-    opacity: 1;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.edit_display_none {
     display: none;
-    z-index: 100;
 }
 
 .edit__content {
-    max-width: 358px;
-    margin: 34px auto 36.51px; 
+    width: 430px;
+    background-color: #FFF;
+    border-radius: 10px;
+    position: relative;
 }
 
-.edit__content-title {
-    margin: 0;
-    color: #000;
-    font-family: 'Inter', Arial, sans-serif;
-    font-style: normal;
-    font-weight: 900;
-    font-size: 24px;
-    line-height: 1.2;
-    padding-bottom: 54px;
-    max-height: 23px;
-}
-
-.edit__close {
+.edit__content-close {
     background-image: url("../images/close_icon.svg");
     width: 40px;
     height: 40px;
     position: absolute;
     background-repeat: no-repeat;
     background-size: cover;
-    top: -40px;
-    right: -40px;
     background-color: transparent;
     border: none;
     cursor: pointer;
+    top: -40px;
+    right: -40px;
+    padding: 0;
+    transition: opacity .4s ease;
+}
+
+.edit__content-close:hover {
+    opacity: .6;
 }
 
 @media screen and (max-width: 565px) {
-    .edit {
-        max-width: 282px;
-        max-height: 322px;
-    }
     .edit__content {
-        max-width: 238px;
-        margin: 25px auto;
+        max-width: 282px;
     }
-    .edit__title {
-        font-size: 18px;
-        padding-bottom: 76px;
-    }
-    .edit__close {
-        width: 26px;
-        height: 26px;
-        right: 0px;
-    }
+    
 }
