--- a/blocks/header.css
+++ b/blocks/header.css
@@ -2,7 +2,7 @@
     max-width: 880px;
     margin: 0 auto;
     padding-top: 74px;
-    border-bottom: 1px #545454 solid;
+    border-bottom: 1px rgba(84, 84, 84, .7) solid;
 }
 
 .header__image {
@@ -12,6 +12,8 @@
 @media screen and (max-width: 565px) {
     .header__image {
         padding-left: 27px;
+        max-width: 126px;
+        padding-bottom: 32px;
     }
 
     .header {
