--- a/pages/index.css
+++ b/pages/index.css
@@ -1,4 +1,4 @@
-@import "./normalize.css";
+@import "../vendor/normalize.css";
 @import "../blocks/page.css";
 @import "../blocks/header.css";
 @import "../blocks/profile.css";
