--- a/pages/index.css
+++ b/pages/index.css
@@ -6,5 +6,5 @@
 @import "../blocks/elements.css";
 @import "../blocks/card.css";
 @import "../blocks/footer.css";
-@import "../blocks/edit.css";
+@import "../blocks/popup.css";
 @import "../blocks/form.css";
