project 5 2nd commit

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -90,8 +90,7 @@
         grid-template-rows: repeat(2, 1fr);
         grid-template-areas: 
         "image info"
-        "button button"
-        ;
+        "button button";
     }
 
     .profile__image {
