--- a/blocks/popup.css
+++ b/blocks/popup.css
@@ -20,10 +20,13 @@
 }
 
 .popup__content {
+    position: relative;
+}
+
+.popup__content_type_form {
     width: 430px;
     background-color: #FFF;
     border-radius: 10px;
-    position: relative;
 }
 
 .popup__content-close {
@@ -47,8 +50,8 @@
 }
 
 .popup__image {
-    max-width: 100%;
-    max-height: 100%;
+    width: 100%;
+    height: 100%;
     position: relative;
 }
 
@@ -67,7 +70,6 @@
     background-color: transparent;
     max-width: 75vw;
     max-height: 75vh;
-    position: relative;
 }
 
 @media screen and (max-width: 565px) {
