--- a/blocks/card.css
+++ b/blocks/card.css
@@ -45,6 +45,7 @@
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     height: 282px;
+    cursor: pointer;
 }
 
 .card__info {
