--- a/blocks/popup.css
+++ b/blocks/popup.css
@@ -9,16 +9,16 @@
     align-items: center;
     z-index: 100;
     flex-direction: column;
-    visibility: visible;
-    opacity: 1;
-    transition: visibility 0s, opacity .5s linear;
-    cursor: pointer;
-}
-
-.popup_disabled {
     visibility: hidden;
     opacity: 0;
     transition: visibility 0s .5s, opacity .5s linear;
+    cursor: pointer;
+}
+
+.popup_enabled {
+    visibility: visible;
+    opacity: 1;
+    transition: visibility 0s, opacity .5s linear;
 }
 
 .popup__content {
