--- a/src/blocks/form.css
+++ b/src/blocks/form.css
@@ -34,6 +34,7 @@
     line-height: 1.2;
     padding-bottom: 13.26px;
     max-height: 14px;
+    z-index: 100;
 }
 
 .form__info-input:nth-child(4) {
