--- a/src/blocks/card.css
+++ b/src/blocks/card.css
@@ -56,6 +56,23 @@
     align-items: center;
 }
 
+.card__info-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.card__info-likes {
+    margin: 0;
+    padding-top: 3px;
+    font-family: 'Inter', Arial, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 1.2;
+}
+
 .card__info-title {
     margin: 0;
     font-family: 'Inter', Arial, sans-serif;
