--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -5,10 +5,43 @@
     margin-bottom: 59px;
 }
 
-.profile__image {
-    max-width: 120px;
-    max-height: 120px;
+.profile__avatar {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 127.5px;
+    height: 127.5px;
+    margin: 0 20.6px 0 0;
+    overflow: hidden;
+    position: relative;
+}
+
+.profile__avatar-image {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
     border-radius: 50%;
+}
+
+.profile__avatar-overlay {
+    position: absolute;
+    background: #000;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: opacity .4s ease;
+}
+.profile__avatar-overlay-image {
+    position: absolute;
+    top: 40%;
+    right: 40%;
+    height: 26px;
+    width: 26px;
+}
+
+.profile__avatar:hover .profile__avatar-overlay {
+    opacity: .8;
+    cursor: pointer;
 }
 
 .profile__info {
